kubernetes/promotionsService/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tf-tutorial
  labels:
    app: promotions-service
  name: promotions-service
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    name: promotions-backend
