kubernetes/promotionsService/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: promotions-backend-ingress
  namespace: tf-tutorial
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: promotions.service.local
    - http:
        paths:
          - path: /promotions
            backend:
              serviceName: promotions-service
              servicePort: 8080
